--- a/cfg.env-we-stg.yml
+++ b/cfg.env-we-stg.yml
@@ -1,4 +1,4 @@
-resource_group_name: 121-we-stg-rg
+resource_group_name: tf121-we-stg-rg
 vnet:
   address_space: 10.11.11.0/24
   resource_group_name: we-stg-rg
