--- a/cfg.global.yml
+++ b/cfg.global.yml
@@ -2,12 +2,12 @@ mssql:
   admin_username: sqladmin
   collation: SQL_Latin1_General_CP1_CI_AS
   database_sku: GP_S_Gen5_1
-prefix: 121
-project: azTfProject121
+prefix: tf121
+project: azTf121
 vm:
   image_offer: 0001-com-ubuntu-server-jammy
   image_publisher: Canonical
   image_sku: 22_04-lts-gen2
   image_version: latest
-  size: Standard_DS1_v2
+  sku_name: Standard_DS1_v2
   username: azureuser
