--- a/cfg.global.yml
+++ b/cfg.global.yml
@@ -4,10 +4,11 @@ mssql:
   database_sku: GP_S_Gen5_1
 prefix: tf121
 project: azTf121
-vm:
+vmss:
   image_offer: 0001-com-ubuntu-server-jammy
   image_publisher: Canonical
   image_sku: 22_04-lts-gen2
   image_version: latest
+  instances: 2
   sku_name: Standard_DS1_v2
   username: azureuser
